# iced_message_box

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/: bash_allow.json
.github/workflows/: test.yml
action-plans/: README.md
docs/: ADVANCED-FEATURES.md  API-CREDENTIALS.md  ARCHITECTURE.md  BUILD-DISTRIBUTION.md  CHANGELOG-SETUP.md  CONFIG-SYSTEM.md  CONTACT-FEEDBACK-SYSTEM.md  CROSS-PLATFORM.md  ERROR-REPORTING.md  GITHUB-PAGES-DARK-MODE.md  QUICK-START.md  README.md  REMOTE-CONFIG-UPDATES.md  RESILIENCE.md  SECURITY-MODEL.md  SYSTEM-TRAY.md  TESTING.md  UI-ARCHITECTURE.md  UI-COMPONENTS.md  UTILITIES.md  VERSIONING.md  tab-drag-reorder.md
docs/templates/: SECURITY.md  about_dialog.rs  alerts.rs  api_client.rs  app_access.json  app_activation.rs  app_menu.rs  app_name.spec  async_operations.rs  auto_update.rs  base.rs  base_frame.rs  cache.rs  ci-rust.yml  circuit_breaker.rs  claude_client.rs  color_picker.rs  colors.rs  config.rs  config_registry.rs  credentials.rs  data_models.rs  encryption.rs  error_dialog.rs  error_handling.rs  error_reporter.rs  feature_flags.rs  feedback.rs  file_operations.rs  generate_changelog.rs  health.rs  help_section.rs  log_viewer.rs  logging_setup.rs  main.rs  messagebox.rs  mod.rs  notifications.rs  oauth_client.rs  path_security.rs  (+13 more)
examples/: basic.rs
src/: lib.rs
